--- a/platformio.ini
+++ b/platformio.ini
@@ -8,78 +8,65 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = ALLinONE_Plus
+
 [env]
 lib_deps = 
 	jchristensen/JC_Button@^2.1.2
 	miguelbalboa/MFRC522@^1.4.10
 	makuna/DFPlayer Mini Mp3 by Makuna@1.1.0
-
 build_flags = 
 	-std=c++17
 	-D__IN_VS_CODE__
-build_unflags = 
-	-std=gnu++11
+build_unflags = -std=gnu++11
 framework = arduino
 
 [env:TonUINO_Classic_3]
 platform = atmelavr
 board = nanoatmega328
-
 build_flags = 
 	${env.build_flags}
 	-D TonUINO_Classic=1
-
 monitor_speed = 115200
 
 [env:TonUINO_Classic_5]
 platform = atmelavr
 board = nanoatmega328
-
 build_flags = 
 	${env.build_flags}
 	-D TonUINO_Classic=1
 	-D FIVEBUTTONS=1
-
 monitor_speed = 115200
 
 [env:TonUINO_Classic_3x3]
 platform = atmelavr
 board = nanoatmega328
-
 build_flags = 
 	${env.build_flags}
 	-D TonUINO_Classic=1
 	-D BUTTONS3X3=1
-
 monitor_speed = 115200
 
 [env:ALLinONE]
 platform = lgt8f
 board = LGT8F328P
 board_build.f_cpu = 16000000L
-; 1=internal clock, 2=external clock
 board_build.clock_source = 2
-; platform_packages = framework-lgt8fx@file://./lgt8f-1.0.6.zip
-
 build_flags = 
 	${env.build_flags}
 	-D ALLinONE=1
-
 monitor_speed = 115200
 
 [env:ALLinONE_3x3]
 platform = lgt8f
 board = LGT8F328P
 board_build.f_cpu = 16000000L
-; 1=internal clock, 2=external clock
 board_build.clock_source = 2
-; platform_packages = framework-lgt8fx@file://./lgt8f-1.0.6.zip
-
 build_flags = 
 	${env.build_flags}
 	-D ALLinONE=1
 	-D BUTTONS3X3=1
-
 monitor_speed = 115200
 
 [env:ALLinONE_Plus]
@@ -88,11 +75,9 @@ board = ATmega4809
 board_build.f_cpu = 16000000L
 board_hardware.oscillator = internal
 board_build.variant = 48pin-standard
-
 build_flags = 
 	${env.build_flags}
 	-D ALLinONE_Plus=1
-
 upload_protocol = arduino
 upload_flags = 
 monitor_speed = 115200
@@ -103,12 +88,10 @@ board = ATmega4809
 board_build.f_cpu = 16000000L
 board_hardware.oscillator = internal
 board_build.variant = 48pin-standard
-
 build_flags = 
 	${env.build_flags}
 	-D ALLinONE_Plus=1
 	-D BUTTONS3X3=1
-
 upload_protocol = arduino
 upload_flags = 
 monitor_speed = 115200
